--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,10 +15,10 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Frontend E-commerce Design using ReactJs" />
+    <meta name="description" content="Frontend restaurant Design using ReactJs" />
     <link rel="apple-touch-icon" href="./user.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Phamacity</title>
+    <title>Aha Food</title>
   </head>
 
   <body>
